# EGPU_EVO-X2_Manager

./: .gitignore  CLAUDE.md  Cargo.toml  config.toml  debug-egpu-bridge.sh  deploy.sh  egpu-manager-spezifikation.md  egpu-managerd.service  fix-boot-order.sh  fix-gtt.sh  fix-keepalive.sh  fix-shutdown.sh  install-fix-with-gdm-fallback.sh  install-fix.sh  install-service.sh  install-tailscale-nuc.sh  nohup.out  prepare-for-egpu.sh  restart-ollama.sh  restart-services.sh  setup-evo-x2.sh  test-evo-x2.sh
crates/egpu-manager-common/src/: config.rs  error.rs  gpu.rs
crates/egpu-manager-gtk/src/: popup.rs  tray.rs
crates/egpu-managerd/: Cargo.toml
crates/egpu-managerd/src/: docker.rs  driver_rebind.rs  health_score.rs  kmsg.rs  link_health.rs  linux_control.rs  main.rs  metrics.rs  monitor.rs  nvidia.rs  recovery.rs  scheduler.rs  warning.rs
crates/egpu-managerd/src/llm/: provider.rs  router.rs
crates/egpu-managerd/src/llm/providers/: openai_compat.rs
crates/egpu-managerd/src/web/: api.rs  mod.rs  sse.rs  ui.rs
crates/evo-manager-gtk/: Cargo.toml  install.sh
crates/evo-manager-gtk/src/: api_client.rs  config.rs  main.rs  popup.rs  state.rs  tray.rs
crates/evo-x2-services/: Cargo.toml  deploy.sh
crates/evo-x2-services/src/: agent.rs  main.rs  metrics.rs  ocr.rs  webhook.rs
crates/flowapp-launcher-gtk/: Cargo.toml  install.sh
crates/flowapp-launcher-gtk/src/: apps.rs  editor.rs  launcher.rs  main.rs  tray.rs
crates/flowaudit-launcher-gtk/src/: tray.rs
crates/vpn-router/: Cargo.toml  README.md
crates/vpn-router/frontend/: index.html
crates/vpn-router/scripts/: configure-router.sh  deploy.sh  emergency-restore.sh  fetch-nordvpn-configs.sh  install-launchagent.sh  setup-macos.sh
crates/vpn-router/src/: main.rs  models.rs  nordvpn.rs  router_api.rs
crates/vpn-router/src/widget/: main.rs  tray.rs
docs/: BUG_CHAT_TIMEOUT.md  FEATURE_STREAMING_DEFAULT.md  ROADMAP-10-10.md  agents.md
scripts/: apply-egpu-tb4-hotplug-fix.sh  deploy-and-recover-no-reboot.sh  deploy-evo-x2-model.sh  egpu-gpu-init.sh  egpu-postboot-verify.sh  hard-recover-no-reboot.sh  restart-evo-ollama.sh
