[package]
name = "vpn-router"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vpn-router"
path = "src/main.rs"

[[bin]]
name = "vpn-router-widget"
path = "src/widget/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
md-5 = "0.10"
hex = "0.4"
gtk = { version = "0.18", optional = true }
glib = { version = "0.18", optional = true }
libappindicator = { version = "0.9", optional = true }
open = { version = "5", optional = true }
async-channel = { version = "2", optional = true }

[features]
default = []
widget = ["gtk", "glib", "libappindicator", "open", "async-channel"]
